[package]
name = "my-clmm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "my_clmm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
enable-log = []
client = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
uint = { git = "https://github.com/raydium-io/parity-common", package = "uint" }
